test/classes/delete-free/lifetimes/field-init-escapes.good
field-init-escapes.chpl:17: error: Field x would outlive the value it is set to
